logs/rPackages.netgsa_err.log
these 5 derivations will be built:
  /nix/store/h9abzvfc47avbwks5kv9l7pf7zg764v6-r-graph-1.48.0.drv
  /nix/store/4ar1n0xz67b2lqyscgv5fk2pbmx1y4vn-r-graphite-1.16.0.drv
  /nix/store/gzwfz4rgv6rsmdp80famhfgjd36sx30h-r-RCy3-1.0.1.drv
  /nix/store/jp7fkc7qlwjy3vxz8dx7g5swjqwss4r9-r-genefilter-1.52.1.drv
  /nix/store/gr9r84zf33lyal5fcs5hicvxy5abxbn2-r-netgsa-4.0.5.drv
this path will be fetched (4.51 MiB download, 4.51 MiB unpacked):
  /nix/store/4qy5438w22l7609x48wihrqfajpbw1qz-netgsa_4.0.5.tar.gz
copying path '/nix/store/4qy5438w22l7609x48wihrqfajpbw1qz-netgsa_4.0.5.tar.gz' from 'https://cache.nixos.org'...
building '/nix/store/jp7fkc7qlwjy3vxz8dx7g5swjqwss4r9-r-genefilter-1.52.1.drv'...
building '/nix/store/h9abzvfc47avbwks5kv9l7pf7zg764v6-r-graph-1.48.0.drv'...
Running phase: unpackPhase
unpacking source archive /nix/store/nasj7wpna8py8ck226zkspmk2br6niha-genefilter_1.52.1.tar.gz
source root is genefilter
setting SOURCE_DATE_EPOCH to timestamp 1453944267 of file genefilter/src/ttest.f
Running phase: patchPhase
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: unpackPhase
Running phase: configurePhase
unpacking source archive /nix/store/fac79mzcbdrkazwfsyzj2najqw8lik3r-graph_1.48.0.tar.gz
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
source root is graph
setting SOURCE_DATE_EPOCH to timestamp 1444782779 of file graph/src/graph.c
Running phase: patchPhase
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: configurePhase
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
* installing *source* package ‘genefilter’ ...
** using staged installation
** libs
using C compiler: ‘clang version 16.0.6’
using Fortran compiler: ‘GNU Fortran (GCC) 13.3.0’
using C++ compiler: ‘clang version 16.0.6’
using SDK: ‘’
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/c++ -std=gnu++17 -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2   -c half_range_mode.cpp -o half_range_mode.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c init.c -o init.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c nd.c -o nd.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c pAUC.c -o pAUC.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c rowPAUCs.c -o rowPAUCs.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c rowttests.c -o rowttests.o
/nix/store/93i6w80axzmddh7kl97br2axr8al13vx-gfortran-wrapper-13.3.0/bin/gfortran  -fPIC  -g -O2  -c ttest.f -o ttest.o
* installing *source* package ‘graph’ ...
** using staged installation
nd.c:24:10: fatal error: 'S.h' file not found
#include "S.h"
         ^~~~~
1 error generated.
make: *** [/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/etc/Makeconf:195: nd.o] Error 1
make: *** Attente des tâches non terminées....
** libs
rowttests.c:172:14: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
              error(errmsg);
                    ^~~~~~
rowttests.c:172:14: note: treat the string as an argument to avoid this
              error(errmsg);
                    ^
                    "%s", 
rowttests.c:181:14: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
              error(errmsg);
                    ^~~~~~
rowttests.c:181:14: note: treat the string as an argument to avoid this
              error(errmsg);
                    ^
                    "%s", 
2 errors generated.
make: *** [/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/etc/Makeconf:195: rowttests.o] Error 1
using C compiler: ‘clang version 16.0.6’
using SDK: ‘’
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c graph.c -o graph.o
half_range_mode.cpp:100:88: warning: format specifies type 'int' but the argument has type 'size_type' (aka 'unsigned long') [-Wformat]
    if (diag) Rprintf( "N = %i, N'' = %i, w = %.4f, |J| = %i\n", N, N_double_prime, w, J.size() );
                                                          ~~                           ^~~~~~~~
                                                          %zu
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -dynamiclib -Wl,-headerpad_max_install_names -undefined dynamic_lookup -L/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/lib -L/nix/store/88xkgzh5g9xppsg3hdxxxh9q43rnxk6k-libcxx-16.0.6/lib -o graph.so graph.o -L/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/lib -lR -lintl -Wl,-framework -Wl,CoreFoundation
1 warning generated.
ERROR: compilation failed for package ‘genefilter’
* removing ‘/nix/store/qc1lzp0nljd6v9zjg6qmw8qll2c0v2s2-r-genefilter-1.52.1/library/genefilter’
error: builder for '/nix/store/jp7fkc7qlwjy3vxz8dx7g5swjqwss4r9-r-genefilter-1.52.1.drv' failed with exit code 1;
       last 25 log lines:
       > make: *** [/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/etc/Makeconf:195: nd.o] Error 1
       > make: *** Attente des tâches non terminées....
       > rowttests.c:172:14: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
       >               error(errmsg);
       >                     ^~~~~~
       > rowttests.c:172:14: note: treat the string as an argument to avoid this
       >               error(errmsg);
       >                     ^
       >                     "%s",
       > rowttests.c:181:14: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
       >               error(errmsg);
       >                     ^~~~~~
       > rowttests.c:181:14: note: treat the string as an argument to avoid this
       >               error(errmsg);
       >                     ^
       >                     "%s",
       > 2 errors generated.
       > make: *** [/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/etc/Makeconf:195: rowttests.o] Error 1
       > half_range_mode.cpp:100:88: warning: format specifies type 'int' but the argument has type 'size_type' (aka 'unsigned long') [-Wformat]
       >     if (diag) Rprintf( "N = %i, N'' = %i, w = %.4f, |J| = %i\n", N, N_double_prime, w, J.size() );
       >                                                           ~~                           ^~~~~~~~
       >                                                           %zu
       > 1 warning generated.
       > ERROR: compilation failed for package ‘genefilter’
       > * removing ‘/nix/store/qc1lzp0nljd6v9zjg6qmw8qll2c0v2s2-r-genefilter-1.52.1/library/genefilter’
       For full logs, run 'nix log /nix/store/jp7fkc7qlwjy3vxz8dx7g5swjqwss4r9-r-genefilter-1.52.1.drv'.
error: 1 dependencies of derivation '/nix/store/gr9r84zf33lyal5fcs5hicvxy5abxbn2-r-netgsa-4.0.5.drv' failed to build
